users.js controller updated with user login code
