# swagger.json
@@ -731,6 +731,59 @@
           }
         }
       }
+    },
+    "/users/login": {
+  "post": {
+    "tags": ["users"],
+    "summary": "Log in a user",
+    "description": "Authenticates a user by comparing email and password",
+    "parameters": [
+      {
+        "name": "body",
+        "in": "body",
+        "required": true,
+        "schema": {
+          "type": "object",
+          "properties": {
+            "email": {
+              "type": "string",
+              "example": "testuser@example.com"
+            },
+            "password": {
+              "type": "string",
+              "example": "Password123!"
+            }
+          },
+          "required": ["email", "password"]
+        }
+      }
+    ],
+    "responses": {
+      "200": {
+        "description": "Login successful",
+        "schema": {
+          "type": "object",
+          "properties": {
+            "message": {
+              "type": "string",
+              "example": "Login successful"
+            },
+            "userId": {
+              "type": "string",
+              "example": "66192aa06b31733a0c175c71"
+            }
+          }
+        }
+      },
+      "401": {
+        "description": "Unauthorized - invalid credentials"
+      },
+      "500": {
+        "description": "Internal Server Error"
+      }
     }
+  }
+}
+
   }
 }
